@@ -1,3 +1,9 @@
+2003-03-09  Tim Michals  <t.michals@attbi.com>
+	
+	* cdl/ser_mipsidt_334a.cdl: Add configuration for second serial port.
+	* src/mipsidt_serial.c:	Updated support for dual serial ports
+	* src/mipsidt_serial.h: Add some helpful extra defines for debug.
+
 2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* cdl/ser_mipsidt_334a.cdl: Remove irrelevant doc link.
